@@ -47,7 +47,7 @@ end_include
 
 begin_enum
 enum|enum
-DECL|enum|__anon2be4516b0103
+DECL|enum|__anon27a7d0550103
 block|{
 DECL|enumerator|PROP_0
 name|PROP_0
@@ -90,7 +90,7 @@ end_typedef
 begin_typedef
 typedef|typedef
 struct|struct
-DECL|struct|__anon2be4516b0208
+DECL|struct|__anon27a7d0550208
 block|{
 DECL|member|update
 name|gboolean
@@ -1296,57 +1296,15 @@ name|hscr
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|adj
-operator|->
-name|lower
-operator|=
-literal|0
-expr_stmt|;
-name|adj
-operator|->
-name|page_size
-operator|=
-name|width
-expr_stmt|;
-name|adj
-operator|->
-name|upper
-operator|=
-name|width
-operator|*
-name|new_factor
-expr_stmt|;
-name|adj
-operator|->
-name|step_increment
-operator|=
-name|new_factor
-expr_stmt|;
-name|adj
-operator|->
-name|page_increment
-operator|=
-name|MAX
+name|gtk_adjustment_configure
 argument_list|(
-name|width
-operator|/
-literal|2.0
+name|adj
 argument_list|,
-name|adj
-operator|->
-name|step_increment
-argument_list|)
-expr_stmt|;
-name|adj
-operator|->
-name|value
-operator|=
-name|CLAMP
-argument_list|(
 operator|(
+name|gtk_adjustment_get_value
+argument_list|(
 name|adj
-operator|->
-name|value
+argument_list|)
 operator|+
 name|width
 operator|/
@@ -1359,25 +1317,24 @@ name|width
 operator|/
 literal|2.0
 argument_list|,
-name|adj
-operator|->
-name|lower
+literal|0
 argument_list|,
-name|adj
-operator|->
-name|upper
-operator|-
 name|width
-argument_list|)
-expr_stmt|;
-name|gtk_adjustment_changed
+operator|*
+name|new_factor
+argument_list|,
+name|new_factor
+argument_list|,
+name|MAX
 argument_list|(
-name|adj
+name|width
+operator|/
+literal|2.0
+argument_list|,
+name|new_factor
 argument_list|)
-expr_stmt|;
-name|gtk_adjustment_value_changed
-argument_list|(
-name|adj
+argument_list|,
+name|width
 argument_list|)
 expr_stmt|;
 name|adj
@@ -1392,57 +1349,15 @@ name|vscr
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|adj
-operator|->
-name|lower
-operator|=
-literal|0
-expr_stmt|;
-name|adj
-operator|->
-name|page_size
-operator|=
-name|height
-expr_stmt|;
-name|adj
-operator|->
-name|upper
-operator|=
-name|height
-operator|*
-name|new_factor
-expr_stmt|;
-name|adj
-operator|->
-name|step_increment
-operator|=
-name|new_factor
-expr_stmt|;
-name|adj
-operator|->
-name|page_increment
-operator|=
-name|MAX
+name|gtk_adjustment_configure
 argument_list|(
-name|height
-operator|/
-literal|2.0
+name|adj
 argument_list|,
-name|adj
-operator|->
-name|step_increment
-argument_list|)
-expr_stmt|;
-name|adj
-operator|->
-name|value
-operator|=
-name|CLAMP
-argument_list|(
 operator|(
+name|gtk_adjustment_get_value
+argument_list|(
 name|adj
-operator|->
-name|value
+argument_list|)
 operator|+
 name|height
 operator|/
@@ -1455,25 +1370,24 @@ name|height
 operator|/
 literal|2.0
 argument_list|,
-name|adj
-operator|->
-name|lower
+literal|0
 argument_list|,
-name|adj
-operator|->
-name|upper
-operator|-
 name|height
-argument_list|)
-expr_stmt|;
-name|gtk_adjustment_changed
+operator|*
+name|new_factor
+argument_list|,
+name|new_factor
+argument_list|,
+name|MAX
 argument_list|(
-name|adj
+name|height
+operator|/
+literal|2.0
+argument_list|,
+name|new_factor
 argument_list|)
-expr_stmt|;
-name|gtk_adjustment_value_changed
-argument_list|(
-name|adj
+argument_list|,
+name|height
 argument_list|)
 expr_stmt|;
 name|gimp_scrolled_preview_thaw
